lang2/macro/tests/ui/fail/19-unknown-struct-ink-marker.stderr
error: encountered unsupported ink! markers for struct
  --> $DIR/19-unknown-struct-ink-marker.rs:10:5
   |
10 | /     #[ink(unknown_or_unsupported)]
11 | |     struct HasUnknownMarker {}
   | |______________________________^

error: unsupported ink! marker for struct
  --> $DIR/19-unknown-struct-ink-marker.rs:10:10
   |
10 |     #[ink(unknown_or_unsupported)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^
